committing in order to work on the legend branch

--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -13,6 +13,7 @@ body {
   list-style-type: none; }
 
 div.container.body-content {
+  min-height: 100vh;
   padding-top: 50px; }
   @media (max-width: 768px) {
     div.container.body-content {
