Added CreatedBy field and notification fixes.

--- a/Odin/Views/Shared/Partials/_notifications.cshtml
+++ b/Odin/Views/Shared/Partials/_notifications.cshtml
@@ -1,17 +1,16 @@
 ﻿
 @model IEnumerable<Odin.ViewModels.Shared.NotificationViewModel>
 
-
+@*Should probably be in a viewmodel wrapper.*@
 <input id="hdnNotificationsCount" type="hidden" value="@Model.Where(n=>!n.IsRead ).Count()" />
-
 
 @foreach (var notification in Model)
 {
 
-    if (notification.NotificationNotificationType == "OrderCreated")
-    {
-        if (!notification.IsRead)
+        if (notification.NotificationNotificationType == "OrderCreated")
         {
+            if (!notification.IsRead)
+            {
             <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" data-isremoved="@notification.IsRemoved" class="notification notifications_unread" id="notificationlistitem_unread">
                 @*<input type="radio" id="r1" name="r1" />*@
                 <label id="notificationlabel" class="notifications notification-label notification-close-unread">&times</label>
@@ -40,7 +39,7 @@
                 <label id="notificationlabel" class="notifications notification-label notification-close-unread">&times</label>
 
                 <strong>@notification.NotificationTitle</strong>
-                <br />@notification.NotificationMessage<a href="/Orders/Transferee/@notification.NotificationOrderId" class="notifications">@notification.NotificationOrderTransfereeFullName</a>
+                <br />@notification.NotificationMessage<a href="/Orders/Transferee/@notification.NotificationOrderId#housing" class="notifications">@notification.NotificationCreatedByFullName</a>
 
 
             </li>
@@ -50,7 +49,7 @@
             <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" data-isremoved="@notification.IsRemoved" class="notification notifications_read" id="notificationlistitem_unread">
                 <label id="notificationlabel" class="notifications notification-label notification-close-read">&times</label>
                 <strong>@notification.NotificationTitle</strong>
-                <br />@notification.NotificationMessage<a href="/Orders/Transferee/@notification.NotificationOrderId" class="notifications">@notification.NotificationOrderTransfereeFullName</a>
+                <br />@notification.NotificationMessage<a href="/Orders/Transferee/@notification.NotificationOrderId#housing" class="notifications">@notification.NotificationCreatedByFullName</a>
             </li>
         }
     }
