--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -37,10 +37,10 @@
                     </li>
                     @if (Model.ViewingDate.HasValue)
                     {
-                    <li class="col-md-12">
-                        <label>@Html.DisplayNameFor(model => model.ViewingDate)</label>
-                        <p>@Html.DisplayFor(model => model.ViewingDate)</p>
-                    </li>
+                        <li class="col-md-12">
+                            <label>@Html.DisplayNameFor(model => model.ViewingDate)</label>
+                            <p>@Html.DisplayFor(model => model.ViewingDate)</p>
+                        </li>
                     }
                 </ul>
                 <div class="row controlsContainer">
@@ -48,27 +48,61 @@
                         @Html.EditorFor(model => model.Liked, new { propertyId = Model.Id })
                     </div>
                 </div>
+                <div class="col-md-12">
+                    <button type="button" id="selectProperty" class='btn propertyDetails btn-@(Model.selected == true ? "warning" : "success") pull-right' data-dismiss="modal">@(Model.selected == true ? "De-" : "")Select Property</button>
+                    <button type="button" id="removeProperty" class="btn propertyDetails btn-danger btn-ok pull-left">Remove Property</button>
+                </div>
+            </div>
+            <div class="row controlsContainer">
+                @*<div class="col-md-12">
+                    <ul class="row sectionList">
+                        <li class="col-md-12">
+                            <label>@Html.DisplayNameFor(model => model.PropertyDescription)</label>
+                            Should be safe because sanitized in view model.
+                            <p>@Html.Raw(@Model.PropertyDescription)</p>
+                        </li>
+                    </ul>
+                </div>*@
+
+                <div class="col-md-12">
+                    <h6>Description/Notes:</h6>
+                </div>
+                <div class="col-md-12">
+                    <h6>---OVERVIEW---</h6>
+                </div>
+                <div class="col-md-12">
+                    <span>@Html.DisplayFor(model => model.PropertyNumberOfBedrooms) beds</span>
+                    <span>@Html.DisplayFor(model => model.PropertyNumberOfBathrooms) baths</span>
+                    <span>@Html.DisplayFor(model => model.PropertySquareFootage) sq. ft. lot</span>
+                </div>
+                <div class="col-md-12">
+                    <h6>---DESCRIPTION---</h6>
+                </div>
+                <div class="col-md-12">
+                    <p>Status: </p>
+                    <p>@Html.Raw(@Model.PropertyDescription)</p>
+                    <p></p>
+                </div>
             </div>
 
-            <div class="col-md-12">
-                <ul class="row sectionList">
-                    <li class="col-md-12">
-                        <label>@Html.DisplayNameFor(model => model.PropertyDescription)</label>
-                        @*<p>@Html.DisplayFor(model => model.PropertyDescription)</p>*@
-                        @*<p>@Model.PropertyDescription.Replace("<br />","\n")</p>*@
-                        <!--Should be safe because sanitized in view model.-->
-                        <p>@Html.Raw(@Model.PropertyDescription)</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+                </div>
+   
 </div>
 <div class="modal-footer">
-    <button type="button" id="removeProperty" class="btn btn-danger btn-ok pull-left">Remove Property</button>
-    <button type="button" id="selectProperty" class='btn btn-@(Model.selected == true ? "warning" : "success") pull-right' data-dismiss="modal">@(Model.selected == true ? "De-" : "")Select Property</button>
+    
 </div>
-
+<style>
+    .propertyDetails {
+        width: 20rem;
+        margin-top: 2rem;
+        display: block;
+        float: right !important;
+    }
+    .controlsContainer
+    {
+        color: blue;
+    }
+</style>
 <script>
     $(document).ready(function () {
         $("#removeProperty.btn-danger").click(function () {
