--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -1,5 +1,4 @@
-﻿@using Odin.Data.Core.Models
-@model Odin.Data.Core.Models.Lease
+﻿@model Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel
 <div class="container-fluid" data-property-id="@Model.Id">
     <div class="row">
         <div class="col-md-6">
@@ -9,26 +8,22 @@
             <p>&nbsp;</p>
         </div>
         <div class="col-md-6 buttonGroup">            
-            @if (ViewBag.IsPDF != true)
-            { 
-                <button type="button" id="exportProperty" class="btn btn-ok">Export to PDF</button>        
-                <button type="button" id="deselectProperty" class='btn btn-secondary' data-dismiss="modal">Deselect Property</button>
-            }
+            <button type="button" id="deselectProperty" class='btn btn-secondary' data-dismiss="modal">Deselect Property</button>            
         </div>        
     </div>
     <div class="row">
         <div class="col-md-3">           
-            <img class="homePhoto" src='@(Model.Property.Photos.Count > 0 ? Model.Property.Photos.First().PhotoUrl:"")' />
+            <img class="homePhoto" src='@(Model.PropertyPhotos.Count() > 0 ? Model.PropertyPhotos.First().PhotoUrl : "")' />
         </div>
         <div class="col-md-9 rightSection">
             <div class="row">
-                <label class="col-md-12 address">@Html.DisplayFor(model => model.Property.Street1)</label>
-                <label class="col-md-12 address2">@Html.DisplayFor(model => model.Property.City), @Html.DisplayFor(model => model.Property.State) @Html.DisplayFor(model => model.Property.PostalCode)</label>
+                <label class="col-md-12 address">@Html.DisplayFor(model => model.PropertyStreet1)</label>
+                <label class="col-md-12 address2">@Html.DisplayFor(model => model.PropertyCity), @Html.DisplayFor(model => model.PropertyState) @Html.DisplayFor(model => model.PropertyPostalCode)</label>
             </div>
             <ul class="row selectedPropertySummary">
                 <li class="col-md-3">
                     <div class="selectedPropertySummary__item">
-                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.Property.NumberOfBedrooms)
+                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.PropertyNumberOfBedrooms)
                         <span class="selectedProperty__summarySpan">Bedrooms</span>
                         </p>
                     </div>
@@ -36,21 +31,21 @@
                 <li class="col-md-3">
                     <div class="selectedPropertySummary__item ">
                         <p class="selectedProperty__summaryContent">
-                            @Html.DisplayFor(model => model.Property.NumberOfBathrooms)
+                            @Html.DisplayFor(model => model.PropertyNumberOfBathrooms)
                         <span class="selectedProperty__summarySpan">Bathrooms</span>
                         </p>
                     </div>
                 </li>
                 <li class="col-md-3">
                     <div class="selectedPropertySummary__item ">
-                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.Property.SquareFootage)
+                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.PropertySquareFootage)
                         <span class="selectedProperty__summarySpan">Square Feet</span>
                         </p>
                     </div>
                 </li>
                 <li class="col-md-3">
                     <div class="selectedPropertySummary__item ">
-                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.Property.Amount)
+                        <p class="selectedProperty__summaryContent">@Html.DisplayFor(model => model.PropertyAmount)
                         <span class="selectedProperty__summarySpan">Per Month</span>
                         </p>
                     </div>
@@ -59,15 +54,61 @@
         </div>
     </div>
     <div class="row leaseSection">
-        <div class="col-md-6">
-            <h4>Lease Information</h4>
+        @if (ViewBag.IsConsultant)
+        {
+            <div class="col-md-12">
+                <div class="row infoLine">
+                    <div class="col-md-10 infoLineItem">
+                        <span>Please ensure the detail information above is accurate and then send the lease documents to your PM via email</span>
+                    </div>
+                    <div class="col-md-2">
+                        <a href="mailto:@ViewBag.pmEmail" id="emailPM">Email My PM</a>
+                    </div>
+                </div>
+            </div>
+        }
+        <div class="col-md-12">
+            <h4>Property Info</h4>
         </div>
-        <div class="col-md-6">
-            <h4>Lease Documents</h4>
+        <div class="col-md-12">
+            <h6>Description/Notes:</h6>
+        </div>
+        <div class="col-md-12">
+            <h6>---OVERVIEW---</h6>
+        </div>
+        <div class="col-md-12">
+            <span>@Html.DisplayFor(model => model.PropertyNumberOfBedrooms) beds</span>
+            <span>@Html.DisplayFor(model => model.PropertyNumberOfBathrooms) baths</span>
+            <span>@Html.DisplayFor(model => model.PropertySquareFootage) sq. ft. lot</span>
+        </div>
+        <div class="col-md-12">
+            <h6>---DESCRIPTION---</h6>
+        </div>
+        <div class="col-md-12">
+            <p>Status: </p>
+            <p></p>
+            <p></p>
         </div>
     </div>
 </div>
 <style>
+    .infoLine{
+        background-color:khaki;
+        height:7rem;
+        padding-top:20px
+        
+    }
+    .infoLineItem {
+        vertical-align: middle;
+    }
+    #emailPM {
+        background-color: olive;
+        color:white;
+        padding:0.7rem;
+        font-size:1.2rem;
+        font-weight:bold;
+        text-decoration:none;
+    }
     .buttonGroup {
         margin-top: 2rem;
     }
@@ -126,10 +167,10 @@
 <script>
     $(document).ready(function () {
         $("#exportProperty").click(function () {
-            TransfereeHousingController.lease2PDF("@Model.Property.Id");
+            TransfereeHousingController.lease2PDF("@Model.Id");
             });
         $('#deselectProperty').click(function () {
-                TransfereeHousingController.selectProperty("", "@Model.Property.Id");
+                TransfereeHousingController.selectProperty("", "@Model.Id");
             });
-        });
+    });
 </script>
