--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="col-md-9 rightSection">
             <div class="row">
-                <label class="col-md-12 address">@Html.DisplayFor(model => model.PropertyStreet1)</label>
+                <label class="col-md-12 address1">@Html.DisplayFor(model => model.PropertyStreet1)</label>
                 <label class="col-md-12 address2">@Html.DisplayFor(model => model.PropertyCity), @Html.DisplayFor(model => model.PropertyState) @Html.DisplayFor(model => model.PropertyPostalCode)</label>
             </div>
             <ul class="row selectedPropertySummary">
@@ -67,36 +67,40 @@
                 </div>
             </div>
         }
-        <div class="col-md-12">
+        <div class="col-md-12 propertyInfo">
             <h4>Property Info</h4>
         </div>
         <div class="col-md-12">
             <h6>Description/Notes:</h6>
         </div>
         <div class="col-md-12">
-            <h6>---OVERVIEW---</h6>
+            <h6>-----OVERVIEW-----</h6>
         </div>
         <div class="col-md-12">
-            <span>@Html.DisplayFor(model => model.PropertyNumberOfBedrooms) beds</span>
-            <span>@Html.DisplayFor(model => model.PropertyNumberOfBathrooms) baths</span>
-            <span>@Html.DisplayFor(model => model.PropertySquareFootage) sq. ft. lot</span>
+            <div class="overviewItems">@Html.DisplayFor(model => model.PropertyNumberOfBedrooms) beds</div>
+            <div class="overviewItems">@Html.DisplayFor(model => model.PropertyNumberOfBathrooms) baths</div>
+            <div class="overviewItems">@Html.DisplayFor(model => model.PropertySquareFootage) sq. ft. lot</div>
         </div>
         <div class="col-md-12">
-            <h6>---DESCRIPTION---</h6>
+            <h6>-----DESCRIPTION-----</h6>
         </div>
         <div class="col-md-12">
-            <p>Status: </p>
-            <p></p>
-            <p></p>
+            <p>@Html.Raw(@Model.PropertyDescription)</p>
         </div>
     </div>
 </div>
 <style>
-    .infoLine{
-        background-color:khaki;
-        height:7rem;
-        padding-top:20px
-        
+    .propertyInfo{
+        margin-top:2rem;
+    }
+    .overviewItems {
+        margin: 0;
+        line-height: 1.5rem;
+    }
+    .infoLine {
+        background-color: khaki;
+        height: 7rem;
+        padding-top: 20px
     }
     .infoLineItem {
         vertical-align: middle;
@@ -122,7 +126,7 @@
     }
     
     .homePhoto {
-        width: 25rem;
+        width: 100%;
     }
     li {
         display: inline-block;
@@ -152,13 +156,16 @@
         color: #808080;
         font-weight: 400;
     }
-    
-    .address {
+
+    .address1 {
         font-size: 1.8rem;
         font-weight: bold;
+        margin-bottom: -1rem;
+        margin-top: -1rem;
     }
     .address2 {
         font-size: 1.5rem;
+        margin-bottom:3rem;
     }
     .leaseSection{
         margin-top:2rem;
