Application.scss created and Site.css removed.

--- a/Odin/Content/styles/scss/2_resets/reset.scss
+++ b/Odin/Content/styles/scss/2_resets/reset.scss
@@ -51,3 +51,11 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+/*Custom added from Site.css*/
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    width: 100%;
+}
