--- a/Odin/Views/Shared/_Layout.cshtml
+++ b/Odin/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
     </div>
     @Scripts.Render("~/bundles/lib")
