--- a/Odin/Content/css/login.css
+++ b/Odin/Content/css/login.css
@@ -46,75 +46,75 @@ a.dw_logo {
 body {
   padding-top: 0px; }
 
-div.container.body-content {
+div.container {
   width: 100%;
   padding-right: 0px;
   margin: 0 0; }
-  div.container.body-content .loginWrap {
+  div.container .loginWrap {
     background-image: url("/Content/Images/bg_img_w_gradient.png");
     background-position: center;
     background-size: cover; }
-    div.container.body-content .loginWrap div.row {
+    div.container .loginWrap div.row {
       margin: 0px;
       height: 100vh;
       width: 100%;
       overflow: hidden; }
-    div.container.body-content .loginWrap div.col-md-4 {
+    div.container .loginWrap div.col-md-4 {
       height: 100vh;
       background-color: white; }
       @media screen and (max-width: 48rem) {
-        div.container.body-content .loginWrap div.col-md-4 {
+        div.container .loginWrap div.col-md-4 {
           /*padding-right: 120px;*/ } }
-      div.container.body-content .loginWrap div.col-md-4 div#caption {
+      div.container .loginWrap div.col-md-4 div#caption {
         line-height: 44px;
         padding-top: 60px;
         font-size: xx-large;
         text-align: center;
         margin-bottom: 97px; }
-        div.container.body-content .loginWrap div.col-md-4 div#caption #logo {
+        div.container .loginWrap div.col-md-4 div#caption #logo {
           display: flex;
           justify-content: center;
           height: 3rem;
           align-items: center;
           margin-bottom: 3rem; }
-          div.container.body-content .loginWrap div.col-md-4 div#caption #logo #logoImage {
+          div.container .loginWrap div.col-md-4 div#caption #logo #logoImage {
             margin-right: 1rem;
             padding-right: 1rem;
             border-right: 1px solid #b7a998; }
-          div.container.body-content .loginWrap div.col-md-4 div#caption #logo #logoOdin {
+          div.container .loginWrap div.col-md-4 div#caption #logo #logoOdin {
             color: #49ae44;
             font-size: 1.75rem; }
-        div.container.body-content .loginWrap div.col-md-4 div#caption span#Odin {
+        div.container .loginWrap div.col-md-4 div#caption span#Odin {
           color: #49ae44; }
-    div.container.body-content .loginWrap .col-md-8 {
+    div.container .loginWrap .col-md-8 {
       position: relative;
       height: 100vh; }
-      div.container.body-content .loginWrap .col-md-8 .loginCopyWrap {
+      div.container .loginWrap .col-md-8 .loginCopyWrap {
         color: white;
         position: absolute;
         top: 10vh;
         left: 10%;
         width: 50%; }
-        div.container.body-content .loginWrap .col-md-8 .loginCopyWrap .head {
+        div.container .loginWrap .col-md-8 .loginCopyWrap .head {
           font-weight: 600;
           font-size: 2.5rem;
           line-height: 3rem; }
-        div.container.body-content .loginWrap .col-md-8 .loginCopyWrap .copy {
+        div.container .loginWrap .col-md-8 .loginCopyWrap .copy {
           font-size: 2rem; }
-  div.container.body-content div.form-group div.col-md-10 {
+  div.container div.form-group div.col-md-10 {
     padding-left: 88px;
     padding-right: 0px; }
-  div.container.body-content div.form-group label {
+  div.container div.form-group label {
     text-align: left;
     padding-left: 0px; }
-  div.container.body-content div.form-group div.passwd {
+  div.container div.form-group div.passwd {
     text-align: center;
     margin-left: 0px;
     padding: 0px;
     width: 100%; }
-  div.container.body-content div.form-group input {
+  div.container div.form-group input {
     max-width: none; }
-    div.container.body-content div.form-group input.btn {
+    div.container div.form-group input.btn {
       color: white;
       width: 154px;
       height: 30px;
@@ -123,6 +123,6 @@ div.container.body-content {
       line-height: 10px;
       background-color: #49ae44;
       text-transform: capitalize; }
-  div.container.body-content p#forgot {
+  div.container p#forgot {
     text-align: center; }
 
